Adding key to producer and consumer and others improvements.